# Taguar

./: Cargo.toml  README.md  makefile
images/: social-card.afdesign
src/: lib.rs  main.rs
tests/: descriptions.rs  flac_id3v2.rs  multi_value.rs
tests/fixtures/: silence.m4a
