[package]
name = "taguar"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
lofty = "0.24"
rfd = "0.17"
walkdir = "2.5"
tokio = { version = "1", features = ["rt-multi-thread"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-all"] }
opus = "0.3"
ogg = "0.9"

[profile.release]
lto = true
codegen-units = 1
